--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -52,4 +52,8 @@
   <input type="password" id="password" name="password" placeholder="Пароль" required>
   <button type="submit">Войти</button>
 </form>
+<h>FastAPI Google OAuth2</h>
+<button type="submit" onclick="window.location.href='/login/google'">
+  Singin with Google
+</button>
 {% endblock %}
