App Restruct Api v1
there are so many changes that I just don't have the words
works: all, but
* bug with OAuth2 redirection to Google, but user creation, authentication and everything else is happening

--- a/src/web/templates/auth/login.html
+++ b/src/web/templates/auth/login.html
@@ -18,7 +18,7 @@
 
             if (response.ok) {
                 // Успешный вход: перенаправляем на другую страницу
-                window.location.href = "/pages/base"; // Замените на нужный URL
+                window.location.href = "/main"; // Замените на нужный URL
             } else {
                 // Ошибка: выводим сообщение или делаем что-то еще
                 const errorData = await response.json(); // Получаем JSON-ответ с ошибкой
