--- a/src/web/templates/search.html
+++ b/src/web/templates/search.html
@@ -4,7 +4,7 @@
 <script>
     const searchForOperation = () => {
         const searchInputValue = document.getElementById("operation_search").value;
-        window.location.href = `/pages/search/${searchInputValue}`;
+        window.location.href = `/operations/search/${searchInputValue}`;
     }
 </script>
 {% endblock %}
