added friendship logic and tables

--- a/src/web/templates/users/profile.html
+++ b/src/web/templates/users/profile.html
@@ -2,12 +2,15 @@
 {% block head %}
 {% endblock head %}
 {% block content %}
-<h1>{{ request_user.username }}</h1>
+<h1>{{ request_user.email }}</h1>
+<h2>Кол-во друзей {{request_user.friend_list|count}}
+    Подписчики {{request_user.received_list|count}}
+    Подписки {{request_user.sent_requests_list|count}}</h2>
 <hr>
 {% if is_owner %}
-    <a href="/users/crud/change-name">Edit</a>
+    <a href="/users/crud/change-name">Edit</a> # изменить ссылку на редактирование
 {% elif cur_user != None %}
-    <a href="/send-friend-request/{{request_user.id}}">Add {{request_user.username}} to friend list</a>
+    <a href="/send-friend-request/{{request_user.id}}">Add {{request_user.email}} to friend list</a>
     <p>что из этого более лояльно для социофобов</p>
     <p>Send friend request?</p>
     <p>Delete from friend list</p>
