--- a/src/web/templates/chat/auth_chat.html
+++ b/src/web/templates/chat/auth_chat.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block head %}
-    <title>Chat</title>
+    <title>Общий чат</title>
 {% endblock %}
 
 {% block content %}
 <div class="flex flex-col items-center">
-    <h1>WebSocket Chat</h1>
-    <h2>Your ID: <span id="ws-id"></span></h2>
+    <h1>Общий онлайн чат</h1>
+    <h2>эмм аммм ам ам {{cur_user.email}}</h2>
     <form action="" onsubmit="sendMessage(event)">
-        <input class="bg-green-300" type="text" id="messageText" autocomplete="off"/>
+        <input class="bg-red-300" type="text" id="messageText" autocomplete="off"/>
         <button>Send</button>
     </form>
     <ul id='messages'>
@@ -17,7 +17,7 @@
 </div>
 <script>
     async function getLastMessages() {
-        const url = 'http://localhost:8000/api/v1/chat/last_messages_unauth'
+        const url = 'http://localhost:8000/api/v1/chat/last_messages_auth_chat'
         const response = await fetch(url, {
             method: 'GET'
         })
@@ -41,9 +41,8 @@
         messages.appendChild(message)
     }
 
-    let client_id = Date.now()
-    document.querySelector("#ws-id").textContent = client_id;
-    let ws = new WebSocket(`ws://localhost:8000/api/v1/chat/ws/${client_id}`);
+    let user_id = {{ cur_user.id }}
+    let ws = new WebSocket(`ws://localhost:8000/api/v1/chat/general_auth_ws/${user_id}`);
     ws.onmessage = function (event) {
         appendMessage(`${event.data} (${new Date().toLocaleString()})`) //  Добавляем  время  к  новому  сообщению
     };
