--- a/src/web/templates/main_page.html
+++ b/src/web/templates/main_page.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<a href="/chat">Онлайн чат</a>
-<a href=""></a>
-<a href=""></a>
-<a href=""></a>
-<a href=""></a>
+<p><a href="/chat">Анонниманый онлайн чат</a></p>
+<p><a href="/auth_chat">Общий онлайн чат</a></p>
+<p><a href=""></a></p>
+<p><a href=""></a></p>
+<p><a href=""></a></p>
 {% endblock content %}
